issue #86: Only overflow on the y axis support panes
It just looks weird to see it going X and Y

--- a/app/assets/stylesheets/conzealand.scss
+++ b/app/assets/stylesheets/conzealand.scss
@@ -325,7 +325,7 @@ select {
 // Fixed height scrollable panes
 .support-pane {
   height: 300px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 // =========================================================================
